--- a/layouts/partials/head/js.html
+++ b/layouts/partials/head/js.html
@@ -7,7 +7,10 @@
     {{- $opts := dict "minify" true }}
     {{- with . | js.Build $opts | fingerprint }}
       <script src="{{ .RelPermalink }}" integrity="{{- .Data.Integrity }}" crossorigin="anonymous"></script>
-      <script defer src="https://umami-six-tan.vercel.app/script.js" data-website-id="ff254bcc-f568-431e-b3bb-afadffa5d393"></script>
     {{- end }}
   {{- end }}
+{{- end }}
+
+{{- if and .Site.Params.umami.enabled .Site.Params.umami.script_url .Site.Params.umami.website_id }}
+  <script defer src="{{ .Site.Params.umami.jsLocation }}" data-website-id="{{ .Site.Params.umami.websiteId }}"></script>
 {{- end }}
