--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,4 +3,4 @@
         {{ site.Title }}
     </a>
 </h1>
-{{ partial "menu.html" (dict "page" .) }}
+{{ partial "menu.html" (dict "page" . "site" .Site) }}
